# ocx-schema-reader

./: .bumpversion.cfg  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  config.yaml  environment.lock.yaml  environment.yaml  log_config.yaml  main.py  main.spec  make.bat  meta.yaml  pyproject.toml  pyproject.toml.old  requirements.txt  requirements_dev.txt  setup.cfg
.github/workflows/: python-package-conda.yml
docs/: ocx_schema_reader.rst  ocx_tools.rst  requirements.txt
docs/source/: cli.rst  conf.py  index.rst  intro.rst  lxml_wrapper.rst  modules.rst  ocx_schema_reader.rst  ocx_xml.rst  parse.rst  schema.rst  schema_cli.rst  schema_xml.rst  utils.rst
ocx_schema_reader/: __init__.py  __main__.py  cli.py  cli_context.py  config.yaml  schema__reader.py  schema_cli.py  schema_data_classes.py  schema_elements.py  schema_helpers.py  schema_reader.py  utils.py  version.py  xml_element.py  xml_parser.py
ocx_schema_reader/cli/: __init__.py  cli_context.py  cli_main.py  config.py  schema.py
ocx_schema_reader/configs/: cli_config.yaml  log_config.yaml  schema_config.yaml
ocx_schema_reader/parse/: config.py  config.yaml  elements.py  helpers.py  reader.py
ocx_schema_reader/schema/: __init__.py  elements.py  helpers.py  parser.py
ocx_schema_reader/schema_xml/: __init__.py  parse.py
ocx_schema_reader/utils/: __init__.py
ocx_tools/: __init__.py
ocx_tools/cli/: __init__.py  cli_context.py  cli_main.py  schema.py
ocx_tools/configs/: cli_config.yaml
ocx_tools/schema/: __init__.py  data_classes.py  elements.py  helpers.py  parser.py
ocx_tools/schema_xml/: element.py
ocx_tools/utils/: __init__.py
ocx_xml/: xml_element.py  xml_parser.py
tests/: conftest.py  test_main_cli.py  test_schema__reader.py  test_schema_cli.py  test_schema_helpers.py  test_schema_reader.py  test_xml_element.py  test_xml_parser.py
tests/data/: OCX_Schema.xsd
tests/test_schema_reader/: test_summary_table.yml
