[metadata]
name = ocx-schema-reader
version = 0.1.0

[options]
packages = find:
install_requires =
  conda-lock
  pyyaml==6.0
  click==8.1.3
  colorlog==6.7.0
  fuzzywuzzy==0.18.0
  tabulate==0.9.0
  python-Levenshtein==0.20.8
  lxml==4.9.2
  requests==2.28.1
[options.entry_points]
console_scripts =
    ocx-schema-reader = main.py:cli